--- a/src/app/dashboard/twitch/alerts/alerts.component.html
+++ b/src/app/dashboard/twitch/alerts/alerts.component.html
@@ -66,8 +66,10 @@
         
         <!-- HEADER -->
         <nb-accordion-item-header class="alert-header">
-            <button nbButton status="primary" nbTooltip="Send test to browser source" nbTooltipStatus="primary" (click)="sendTestAlert($event, al)"><nb-icon icon="cast"></nb-icon></button>
-            <nb-toggle class="alert-toggle" (checkedChange)="toggleEnabled(al)" [(ngModel)]="al.enabled" (click)="$event.stopPropagation()"></nb-toggle>
+            <div class="alert-controls">
+                <button nbButton status="primary" nbTooltip="Send test to browser source" nbTooltipStatus="primary" (click)="sendTestAlert($event, al)"><nb-icon icon="cast"></nb-icon></button>
+                <nb-toggle class="alert-toggle" (checkedChange)="toggleEnabled(al)" [(ngModel)]="al.enabled" (click)="$event.stopPropagation()"></nb-toggle>
+            </div>
             <div class="alert-name">
                 {{al.name}}
             </div>
