z-index -1 on clip background

--- a/src/app/browsersource/elements/clip/clip.component.html
+++ b/src/app/browsersource/elements/clip/clip.component.html
@@ -1,7 +1,7 @@
 <div class="viewport-flex" [ngStyle]="viewportStyle" [style.opacity]="!element.loaded ? '0' : 'initial'">
     
     <div [@innerIN]="element.loaded ? element.innerTransitionIN : 'loading'" [@innerOUT]="element.innerTransitionOUT" [ngStyle]="outerStyle" class="outer-container" [class.rainbow]="outerStyle.rainbow" [class.vaporwave]="outerStyle.vaporwave">
-        <div class="cant-play" [ngStyle]="innerStyle" style="position: absolute;">
+        <div class="cant-play" [ngStyle]="innerStyle" style="position: absolute; z-index: -1;">
             {{message}}
         </div>
         <iframe [ngStyle]="innerStyle"
