removed border settings for audio

--- a/src/app/dashboard/twitch/alerts/alerts.component.html
+++ b/src/app/dashboard/twitch/alerts/alerts.component.html
@@ -376,7 +376,7 @@
                                         </nb-accordion-item>
 
                                         <!-- BORDER SETTINGS -->
-                                        <nb-accordion-item>
+                                        <nb-accordion-item *ngIf="elem.type!=='audio'">
                                             <nb-accordion-item-header>
                                                 Border Settings
                                             </nb-accordion-item-header>
