--- a/src/app/dashboard/twitch/alerts/alerts.component.scss
+++ b/src/app/dashboard/twitch/alerts/alerts.component.scss
@@ -413,4 +413,10 @@ input {
             row-gap: 0.2rem;
         }
     }
+
+    .option-header:hover,
+    .option-header:active,
+    .option-header {
+        color: dimgray;
+    }
 }
