--- a/src/app/dashboard/twitch/alerts/alerts.component.scss
+++ b/src/app/dashboard/twitch/alerts/alerts.component.scss
@@ -417,6 +417,6 @@ input {
     .option-header:hover,
     .option-header:active,
     .option-header {
-        color: dimgray;
+        color: dimgray !important;
     }
 }
