--- a/src/app/dashboard/twitch/alerts/alerts.component.scss
+++ b/src/app/dashboard/twitch/alerts/alerts.component.scss
@@ -32,7 +32,6 @@ input {
 }
 
 .alert-header {
-    overflow: hidden;
     justify-content: space-between;
     .alert-controls {
         display: flex;
@@ -59,15 +58,43 @@ input {
         }
     }
 }
+.alert-mover {
+    position: absolute;
+    left: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-left: 0.5rem;
+    gap: 1rem;
+
+    > nb-icon:not(:hover) {
+        transition: 0.3s;
+    }
+    > nb-icon:hover {
+        transform-origin: center;
+        transform: scale(1.25);
+        filter: drop-shadow(0 0 6px white);
+        transition: 0.3s;
+    }
+
+    > nb-icon.disabled {
+        pointer-events: none;
+        opacity: 0.8;
+        color: dimgray;
+    }
+}
 @media only screen and (max-width:600px) {
     .alert-header {
+        overflow: hidden;
         .alert-controls {
             flex-direction: column;
         }
     }
+    .alert-mover {
+        display: none;
+    }
 }
-
-
 
 
 .alert-card {
